objects/Account_Revenue_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>PS_Best__c</fullName>
        <label>PS Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_Land__c</fullName>
        <label>PS Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_Low__c</fullName>
        <label>PS Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Revenue Forecasts (Partner Account)</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Week_Best__c</fullName>
        <formula>if(Previous_Week__r.Subscription_Best__c &gt;0, (Previous_Week__r.Subscription_Best__c + Previous_Week__r.PS_Best__c),   Previous_Week__r.Best__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Week Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Week_Commit__c</fullName>
        <formula>if(Previous_Week__r.Subscription_Low__c &gt;0, (Previous_Week__r.Subscription_Low__c + Previous_Week__r.PS_Low__c),   Previous_Week__r.Commit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Week Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Week_Land__c</fullName>
        <formula>Previous_Week__r.Subscription_Land__c  +  Previous_Week__r.PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Week Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Week__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Week</label>
        <referenceTo>Account_Revenue_Forecast__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Best_Diff__c</fullName>
        <formula>Q1_2016_Best__c - IF(ISNULL(Previous_Week__r.Q1_2016_Best__c),0,Previous_Week__r.Q1_2016_Best__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2016 Best Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Best__c</fullName>
        <label>Q1 2016 Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Land_Diff__c</fullName>
        <formula>Q1_2016_Land__c - IF(ISNULL(Previous_Week__r.Q1_2016_Land__c),0,Previous_Week__r.Q1_2016_Land__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2016 Land Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Land__c</fullName>
        <formula>Jan_2016__c + Feb_2016__c +  Mar_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2016 Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Low_Diff__c</fullName>
        <formula>Q1_2016_Low__c - IF(ISNULL(Previous_Week__r.Q1_2016_Low__c),0,Previous_Week__r.Q1_2016_Low__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2016 Low Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Low__c</fullName>
        <label>Q1 2016 Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Risk__c</fullName>
        <formula>Q1_2016_Land__c -  Q1_2016_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2016 Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Target1__c</fullName>
        <formula>IF(Revenue_Forecast_Target_Multiplier__c = 0, Q1_2016_Target__c,  Revenue_Forecast_Target_Multiplier__c * Q1_2016_Land__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2016 Target1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Target__c</fullName>
        <label>Q1 2016 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2016_Upside__c</fullName>
        <formula>Q1_2016_Best__c -  Q1_2016_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2016 Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Best_Diff__c</fullName>
        <formula>Q1_2016_Best__c - IF(ISNULL(Previous_Week__r.Q1_2016_Best__c),0,Previous_Week__r.Q1_2016_Best__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2017 Best Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Best__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2017 Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Land_Diff__c</fullName>
        <formula>Q1_2017_Land__c - IF(ISNULL(Previous_Week__r.Q1_2017_Land__c),0,Previous_Week__r.Q1_2017_Land__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2017 Land Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Land_Subscribe__c</fullName>
        <label>Q1 2017 Land Subscribe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Land__c</fullName>
        <formula>Jan_2017__c + Feb_2017__c + Mar_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2017 Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Low_Diff__c</fullName>
        <formula>Q1_2017_Low__c - IF(ISNULL(Previous_Week__r.Q1_2017_Low__c),0,Previous_Week__r.Q1_2017_Low__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2017 Low Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Low_Subscription__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2017 Low Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Low__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2017 Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Risk__c</fullName>
        <formula>Q1_2017_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2017 Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Set_Target__c</fullName>
        <label>Q1 2017 Set Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Target1__c</fullName>
        <formula>IF(Revenue_Forecast_Target_Multiplier__c &gt; 0, Revenue_Forecast_Target_Multiplier__c * Q1_2017_Land__c, If( Q1_2017_Set_Target__c &gt;0, Q1_2017_Set_Target__c , Q1_2017_Land__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2017 Target1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2017_Upside__c</fullName>
        <formula>Q1_2017_Best__c - Q1_2017_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2017 Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2018_Best__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2018 Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2018_Land_Diff__c</fullName>
        <formula>Q1_2018_Land__c - IF(ISNULL(Previous_Week__r.Q1_2018_Land__c),0,Previous_Week__r.Q1_2018_Land__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2018 Land Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2018_Land_Subscribe__c</fullName>
        <formula>Q1_2017_Land_Subscribe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2018 Land Subscribe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2018_Land__c</fullName>
        <formula>Jan_2018__c + Feb_2018__c + Mar_2018__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2018 Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2018_Low_Subscription__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2018 Low Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_2018_Low__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2018 Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2019_Forecast__c</fullName>
        <formula>Jan_2019__c+ Feb_2019__c+ Mar_2019__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2019 Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2019_Land_Subscribe__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2019 Land Subscribe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_2019_Low_Subscription__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2019 Low Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_2019_Risk__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2019 Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2019_Upside__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 2019 Upside</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_2020_Forecast__c</fullName>
        <formula>Jan_2020__c+ Feb_2020__c+ Mar_2020__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 2020 Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_PS_Change__c</fullName>
        <formula>PS_Land__c -  Previous_Week__r.PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 PS Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_Week__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Q1 Week</label>
        <referenceTo>Account_Revenue_Forecast__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts (Q1 Week)</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q2_2016_Best_Diff__c</fullName>
        <formula>Q2_2016_Best__c - IF(ISNULL(Previous_Week__r.Q2_2016_Best__c),0,Previous_Week__r.Q2_2016_Best__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 2016 Best Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_2016_Low_Diff__c</fullName>
        <formula>Q2_2016_Low__c - IF(ISNULL(Previous_Week__r.Q2_2016_Low__c),0,Previous_Week__r.Q2_2016_Low__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 2016 Low Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_2017_Land_Subs__c</fullName>
        <label>zQ2_2017_Land_Subs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_2017_Low_Subs__c</fullName>
        <label>zQ2_2017_Low_Subs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_2017_Set_Target__c</fullName>
        <label>Q2 2017 Set Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_2018_Land_Subs__c</fullName>
        <formula>Q2_2017_Land_Subs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2_2018_Land_Subs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_2018_Low_Subs__c</fullName>
        <label>zQ2 2018 Low Subs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_2019_Forecast__c</fullName>
        <formula>Apr_2019__c+ May_2019__c + June_2019__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 2019 Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_2019_Land_Subs__c</fullName>
        <label>zQ2 2019 Land Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_2019_Low_Subs__c</fullName>
        <label>zQ2 2019 Low Subs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Change_Land__c</fullName>
        <formula>Change_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4 Change Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_PS_Best__c</fullName>
        <formula>PS_Best__c</formula>
        <label>Q4 PS Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_PS_Change__c</fullName>
        <formula>BQ2_PS_Land__c - Previous_Week__r.BQ2_PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 PS Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_PS_Land__c</fullName>
        <formula>PS_Land__c</formula>
        <label>Q4 PS Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_PS_Low__c</fullName>
        <formula>PS_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4 PS Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Previous_Week_Land__c</fullName>
        <formula>Previous_Week_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4 Previous Week Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Quota__c</fullName>
        <formula>Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4 Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Subscription_Best__c</fullName>
        <formula>Subscription_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4 Subscription Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Subscription_Land__c</fullName>
        <formula>Subscription_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4 Subscription Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Subscription_Low__c</fullName>
        <formula>Subscription_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4 Subscription Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Target_2018__c</fullName>
        <label>Q2 Target 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Total_Best__c</fullName>
        <formula>Total_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4 Total Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Total_Land__c</fullName>
        <formula>Total_Land__c</formula>
        <label>Q4 Total Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Total_Low__c</fullName>
        <formula>Total_Low__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4 Total Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Week__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Q2 Week</label>
        <referenceTo>Account_Revenue_Forecast__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts (Q2 Week)</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q3_2017_Set_Target__c</fullName>
        <label>Q3 2017 Set Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_2018_Land_Subs_c__c</fullName>
        <formula>Q3_2017_Land_Subs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3_2018_Land_Subs__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_PS_Change__c</fullName>
        <formula>BQ3_PS_Land__c - Previous_Week__r.BQ3_PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3 PS Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Week__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Q3 Week</label>
        <referenceTo>Account_Revenue_Forecast__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts (Q3 Week)</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4_2018_Land_Subs_c__c</fullName>
        <formula>Q4_2017_Land_Subs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q4_2018_Land_Subs__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_2018__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Revenue Forecast</label>
        <referenceTo>Account_Revenue_Forecast__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts (Account Revenue Forecast)</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Forecast_Target_Multiplier__c</fullName>
        <formula>Account__r.Revenue_Forecast_Target_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Forecast Target Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <formula>IF(and(isblank(text(LOB__c)), isblank(text(LOB_O__c))),&apos;&apos;, if(not(isblank(text(LOB__c))),text(LOB__c),if(not(isblank(text(LOB_O__c))),text(LOB_O__c),null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Upside_Valid__c</fullName>
        <formula>If(Q1_2017_Low__c &gt; 10000 ||Q2_2017_Low__c &gt; 10000 || Q3_2017_Low__c &gt; 10000 || Q4_2017_Low__c &gt; 10000 || Q1_2017_Best__c &gt;10000 || Q2_2017_Best__c &gt; 10000 || Q3_2017_Best__c &gt; 10000 || Q4_2017_Best__c &gt; 10000,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Upside Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sep_2016_PE__c</fullName>
        <formula>Sept_2016__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sep 2016 PE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_2018__c</fullName>
        <formula>Sept_2017__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sep 2018 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_2019__c</fullName>
        <label>Sep 2019</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sept_2016__c</fullName>
        <label>Sept 2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sept_2017__c</fullName>
        <label>Sept 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sept_2018__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sept 2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Account</label>
        <referenceTo>SourceAccounts__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#66FF99</color>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steady_State__c</fullName>
        <label>Steady State</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Best__c</fullName>
        <label>Subscription Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Land__c</fullName>
        <label>Subscription Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Low__c</fullName>
        <label>Subscription Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Account_Revenue_Forecast__c</referenceTo>
        <relationshipLabel>Account Revenue Forecasts (Account Revenue Forecast)</relationshipLabel>
        <relationshipName>Account_Revenue_Forecasts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to syn with SFDC</description>
        <label>Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_2017_BE_PS__c</fullName>
        <formula>PS_Land__c + BQ2_PS_Land__c +  BQ3_PS_Land__c  +  BQ4_PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total 2017 BE PS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_2017_BE_Subscription__c</fullName>
        <formula>Q2_2017_Land_Subs__c +  Q3_2017_Land_Subs__c +  Q4_2017_Land_Subs__c +  Q1_2017_Land_Subscribe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total 2017 BE Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_2017_Land_BE__c</fullName>
        <formula>Total_Q1_BE__c + Total_Q2_BE__c +  Total_Q3_BE__c +  Total_Q4_BE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total 2017 Land BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_2018_BE_Subscriptio__c</fullName>
        <formula>Q2_2017_Land_Subs__c + Q3_2017_Land_Subs__c + Q4_2017_Land_Subs__c + Q1_2017_Land_Subscribe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total 2018 BE Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Best_Formula__c</fullName>
        <formula>If( (PS_Best__c &gt;0 ||  Subscription_Best__c &gt; 0), PS_Best__c + Subscription_Best__c, Total_Best__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Best Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Best__c</fullName>
        <formula>PS_Best__c +  Subscription_Best__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Change__c</fullName>
        <formula>Q3_2017_Land_Subs__c - Previous_Week__r.Q3_2017_Land_Subs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Land_Formula__c</fullName>
        <formula>If( (PS_Land__c &gt;0 ||  Subscription_Land__c &gt; 0), PS_Land__c + Subscription_Land__c, Land__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Land Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Land__c</fullName>
        <formula>Q2_2017_Land_Subs__c + BQ2_PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Land_c__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total_Land__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Low_Formula__c</fullName>
        <formula>If( (PS_Low__c &gt;0 ||  Subscription_Low__c &gt; 0), PS_Low__c + Subscription_Low__c, Total_Low__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Low Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Low__c</fullName>
        <formula>PS_Low__c +   Q1_2017_Low_Subscription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Q1_BE__c</fullName>
        <formula>Q1_2017_Land_Subscribe__c + PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Q1 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Q2_BE__c</fullName>
        <formula>Q2_2017_Land_Subs__c  + BQ2_PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Q2 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Q3_BE__c</fullName>
        <formula>Q3_2017_Land_Subs__c  + BQ3_PS_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Q3 BE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Date__c</fullName>
        <label>Week Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weight_Avg__c</fullName>
        <label>Weight Avg</label>
        <summarizedField>Account_Revenue_Forecast_Comment__c.Weight_Avg__c</summarizedField>
        <summaryForeignKey>Account_Revenue_Forecast_Comment__c.Account_Revenue_Forecast__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID_forecast__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID forecast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2014_Q1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2014_Q2__c</fullName>
        <label>2014 Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2014_Q3__c</fullName>
        <label>2014 Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2014__c</fullName>
        <formula>X2014_Q1__c +  X2014_Q2__c +  X2014_Q3__c +  X2014_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>